--- a/ProjectMain/homepage/templates/homepage/index.html
+++ b/ProjectMain/homepage/templates/homepage/index.html
@@ -53,21 +53,21 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="active" href="{% url 'index' %}">home</a></li>
-                                        <li><a href="{% url 'story' %}">Our Story</a></li>
-                                        <li><a href="{% url 'gallery' %}">Gallery</a></li>
+                                        <!--<li><a href="{% url 'story' %}">Our Story</a></li>-->
+                                        <!--<li><a href="{% url 'gallery' %}">Gallery</a></li>-->
                                         <!--<li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">blog</a></li>
                                                 <li><a href="single-blog.html">single-blog</a></li>
                                             </ul>
                                         </li>-->
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                        <!--<li><a href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="{% url 'accommodation' %}">Accommodation</a></li>
                                                 <li><a href="elements.html">elements</a></li>
                                             </ul>
-                                        </li>
-                                        <li><a href="{% url 'contact' %}">Contact</a></li>
+                                        </li>-->
+                                        <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
                                     </ul>
                                 </nav>
                             </div>
@@ -436,10 +436,10 @@
                     <div class="quick_links">
                         <ul>
                             <li><a href="{% url 'index' %}">Home</a></li>
-                            <li><a href="{% url 'story' %}">Our Story</a></li>
-                            <li><a href="{% url 'gallery' %}">Gallery</a></li>
-                            <li><a href="{% url 'accommodation' %}">Accommodation</a></li>
-                            <li><a href="{% url 'contact' %}">Contact</a></li>
+                            <!--<li><a href="{% url 'story' %}">Our Story</a></li>-->
+                            <!--<li><a href="{% url 'gallery' %}">Gallery</a></li>-->
+                            <!--<li><a href="{% url 'accommodation' %}">Accommodation</a></li>-->
+                            <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
                         </ul>
                     </div>
                 </div>
