configured extend from base

--- a/ProjectMain/homepage/templates/homepage/index.html
+++ b/ProjectMain/homepage/templates/homepage/index.html
@@ -226,7 +226,7 @@
                             <span>
                                 16.00
                             </span>
-                            <h3>Wedding Ceremony</h3>
+                            <h3>Ceremony</h3>
                             <p>Coming Soon</p>
                             <img src="{% static 'homepage/img/program_details/ornaments.png' %}" alt="">
                         </div>
