--- a/ProjectMain/homepage/templates/homepage/base.html
+++ b/ProjectMain/homepage/templates/homepage/base.html
@@ -52,7 +52,7 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="{% url 'index' %}">home</a></li>
+                                        <li><a class="active" href="{% url 'index' %}">Home</a></li>
                                         <!--<li><a href="{% url 'story' %}">Our Story</a></li>-->
                                         <li><a href="{% url 'gallery' %}">Gallery</a></li>
                                         <!--<li><a href="#">blog <i class="ti-angle-down"></i></a>
@@ -61,13 +61,15 @@
                                                 <li><a href="single-blog.html">single-blog</a></li>
                                             </ul>
                                         </li>-->
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="{% url 'accommodation' %}">Accommodation</a></li>
-                                                <li><a href="elements.html">elements</a></li>
-                                            </ul>
-                                        </li>
+                                        <li><a href="{% url 'location' %}">Location Details</a></li>
                                         <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
+                                        {% if user.is_authenticated%}
+                                            <li><a href="{% url 'rsvp' %}">Rsvp</a></li>
+                                            <li><a href="{% url 'profile' %}">Profile</a></li>
+                                            <li><a href="{% url 'logout' %}">Logout</a></li>
+                                        {% else %}
+                                            <li><a href="{% url 'login' %}">Login</a></li>
+                                        {% endif %}
                                     </ul>
                                 </nav>
                             </div>
@@ -99,8 +101,15 @@
                             <li><a href="{% url 'index' %}">Home</a></li>
                             <!--<li><a href="{% url 'story' %}">Our Story</a></li>-->
                             <li><a href="{% url 'gallery' %}">Gallery</a></li>
-                            <li><a href="{% url 'accommodation' %}">Accommodation</a></li>
+                            <li><a href="{% url 'location' %}">Location Details</a></li>
                             <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
+                            {% if user.is_authenticated%}
+                                <li><a href="{% url 'rsvp' %}">RSVP</a></li>
+                                <li><a href="{% url 'profile' %}">Profile</a></li>
+                                <li><a href="{% url 'logout' %}">Logout</a></li>
+                            {% else %}
+                                <li><a href="{% url 'login' %}">Login</a></li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
