--- a/ProjectMain/homepage/templates/homepage/base.html
+++ b/ProjectMain/homepage/templates/homepage/base.html
@@ -54,16 +54,17 @@
                                     <ul id="navigation">
                                         <li><a class="active" href="{% url 'index' %}">Home</a></li>
                                         <!--<li><a href="{% url 'story' %}">Our Story</a></li>-->
-                                        <li><a href="{% url 'gallery' %}">Gallery</a></li>
+                                        <!--<li><a href="{% url 'gallery' %}">Gallery</a></li>-->
                                         <!--<li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">blog</a></li>
                                                 <li><a href="single-blog.html">single-blog</a></li>
                                             </ul>
                                         </li>-->
-                                        <li><a href="{% url 'location' %}">Location Details</a></li>
+                                        
                                         <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
-                                        {% if user.is_authenticated%}
+                                        {% if user.is_authenticated %}
+                                            <li><a href="{% url 'location' %}">Location Details</a></li>
                                             <li><a href="{% url 'rsvp' %}">Rsvp</a></li>
                                             <li><a href="{% url 'profile' %}">Profile</a></li>
                                             <li><a href="{% url 'logout' %}">Logout</a></li>
@@ -100,10 +101,11 @@
                         <ul>
                             <li><a href="{% url 'index' %}">Home</a></li>
                             <!--<li><a href="{% url 'story' %}">Our Story</a></li>-->
-                            <li><a href="{% url 'gallery' %}">Gallery</a></li>
-                            <li><a href="{% url 'location' %}">Location Details</a></li>
+                            <!--<li><a href="{% url 'gallery' %}">Gallery</a></li>-->
+                            
                             <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
                             {% if user.is_authenticated%}
+                                <li><a href="{% url 'location' %}">Location Details</a></li>
                                 <li><a href="{% url 'rsvp' %}">RSVP</a></li>
                                 <li><a href="{% url 'profile' %}">Profile</a></li>
                                 <li><a href="{% url 'logout' %}">Logout</a></li>
