--- a/ProjectMain/homepage/templates/homepage/index.html
+++ b/ProjectMain/homepage/templates/homepage/index.html
@@ -66,11 +66,7 @@
                         </div>
                         <span>Groom</span>
                         <h3>Doug Naes</h3>
-                        <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered
-                            alteration in some content of a page when looking at its layout. The point of using Lorem
-                            Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-                            Content here content here, making it look like readable English. Many desktop publishing
-                            packages and web page editors now use.</p>
+                        <p>Doug is kind and gentle, silly and goofy, genuine and loving. He is inviting. If he loves something, the people around him will know just for the sheer fact that they will be included in his excitement. He understands that people are made in the Image of God and treats them with the utmost value because of his understanding. The look that he gives Bethany has never changed: always with awe and passion. Because of his constant pursuit of the Lord (and his assurance in the Lord’s constant pursuit of him), he is continuously humbling himself to raise Bethany up. He leads her well, he guides her in everything they do, and he pushes her to be the best woman of God she can be.</p>
                         <div class="social_links">
                             <ul>
                                 <li><a href="https://www.facebook.com/doug.naes"> <i class="fa fa-facebook"></i> </a></li>
@@ -84,18 +80,15 @@
                     <div class="weding_time_line text-center">
                         <div class="single_time_line">
                             <h3>First Met</h3>
-                            <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered
-                                alteration in some.</p>
+                            <p>At Doug’s sister’s birthday dinner, they shared a mutual love of How to Lose a Guy in 10 Days and wanted to spend every moment possible together after that</p>
                         </div>
                         <div class="single_time_line">
                             <h3>He Proposed</h3>
-                            <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered
-                                alteration in some.</p>
+                            <p>Doug couldn’t wait any longer once he got the ring in, so immediately got all the family together and popped the question at Lookout Mountain. Bethany was just so overjoyed that she couldn’t stop the happy-tears from flowing.</p>
                         </div>
                         <div class="single_time_line">
                             <h3>Love Story</h3>
-                            <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered
-                                alteration in some.</p>
+                            <p>They get to learn to love each other the way Scripture advises: with humble submission, Christ-like love, and ??? (I need help with another word because I can’t think of it)</p>
                         </div>
                         <div class="single_time_line">
                             <h3>Wedding Day</h3>
