--- a/ProjectMain/homepage/templates/homepage/index.html
+++ b/ProjectMain/homepage/templates/homepage/index.html
@@ -208,7 +208,7 @@
                 <div class="col-xl-12">
                     <div class="section_title text-center">
                         <img src="{% static 'homepage/img/banner/flowers.png' %}" alt="">
-                        <h3>Wedding Details</h3>
+                        <h3>Registry Details</h3>
                     </div>
                 </div>
             </div>
@@ -217,10 +217,10 @@
                     <div class="single_program program_bg_1 text-center">
                         <div class="program_inner ">
                             <span>
-                                16.00
+                                14:00
                             </span>
                             <h3>Ceremony</h3>
-                            <p>Coming Soon</p>
+                            <p></p>
                             <img src="{% static 'homepage/img/program_details/ornaments.png' %}" alt="">
                         </div>
                     </div>
@@ -229,10 +229,10 @@
                     <div class="single_program program_bg_2 text-center">
                         <div class="program_inner ">
                             <span>
-                                20.00
+                                15:00
                             </span>
-                            <h3>Lunch Time</h3>
-                            <p>Coming Soon</p>
+                            <h3>Cocktails</h3>
+                            <p></p>
                             <img src="{% static 'homepage/img/program_details/ornaments.png' %}" alt="">
                         </div>
                     </div>
@@ -241,10 +241,10 @@
                     <div class="single_program program_bg_3 text-center">
                         <div class="program_inner ">
                             <span>
-                                22.00
+                                16:30
                             </span>
-                            <h3>WeParty Time</h3>
-                            <p>Coming Soon </p>
+                            <h3>Reception</h3>
+                            <p></p>
                             <img src="{% static 'homepage/img/program_details/ornaments.png' %}" alt="">
                         </div>
                     </div>
