--- a/ProjectMain/homepage/templates/homepage/index.html
+++ b/ProjectMain/homepage/templates/homepage/index.html
@@ -66,7 +66,7 @@
                         </div>
                         <span>Groom</span>
                         <h3>Doug Naes</h3>
-                        <p>Doug is kind and gentle, silly and goofy, genuine and loving. He is inviting. If he loves something, the people around him will know just for the sheer fact that they will be included in his excitement. He understands that people are made in the Image of God and treats them with the utmost value because of his understanding. The look that he gives Bethany has never changed: always with awe and passion. Because of his constant pursuit of the Lord (and his assurance in the Lord’s constant pursuit of him), he is continuously humbling himself to raise Bethany up. He leads her well, he guides her in everything they do, and he pushes her to be the best woman of God she can be.</p>
+                        <p>Doug is kind and gentle, silly and goofy, genuine and loving. He is inviting. If he loves something, the people around him will know just for the sheer fact that they will be included in his excitement. He understands that people are made in the Image of God and treats them with the utmost value because of his understanding. The look that he gives Bethany has never changed: always with awe and passion. Because of his constant pursuit of the Lord (and his assurance in the Lord’s constant pursuit of him), he is continuously humbling himself to raise Bethany up. He leads her well, he guides her in everything they do, and he pushes her to be the best woman of God she can be. -"Bethany"</p>
                         <div class="social_links">
                             <ul>
                                 <li><a href="https://www.facebook.com/doug.naes"> <i class="fa fa-facebook"></i> </a></li>
@@ -88,11 +88,13 @@
                         </div>
                         <div class="single_time_line">
                             <h3>Love Story</h3>
-                            <p>They get to learn to love each other the way Scripture advises: with humble submission, Christ-like love, and ??? (I need help with another word because I can’t think of it)</p>
+                            <p>They get to learn to love each other the way Scripture advises: with humble submission, Christ-like love, and dedication.</p>
                         </div>
+                        <!--
                         <div class="single_time_line">
                             <h3>Wedding Day</h3>
                         </div>
+                        -->
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4">
@@ -102,11 +104,7 @@
                         </div>
                         <span>Bride</span>
                         <h3>Bethany Sayers</h3>
-                        <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered
-                            alteration in some content of a page when looking at its layout. The point of using Lorem
-                            Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-                            Content here content here, making it look like readable English. Many desktop publishing
-                            packages and web page editors now use.</p>
+                        <p>The middle name Joy couldn’t be a more apt description of the kind of person Bethany is – joyful. She is full of life and she exudes happiness. Bethany is as bold as she is humble, and one of the most genuinely caring people you’ll meet. Bethany is defined by her core family values, and her identity is in Christ alone. As any of her closest friends and family would tell you, Bethany is fiercely loyal, and she embodies what it means to treat her neighbor as she’d treat herself. She loves Doug unconditionally, and is committed to being is life-long best friend. -"Doug"</p>
                         <div class="social_links">
                             <ul>
                                 <li><a href="https://www.facebook.com/bethany.joy.77"> <i class="fa fa-facebook"></i> </a></li>
@@ -202,6 +200,7 @@
     <!--/ gallery_area  -->
 
     <!-- program_details -->
+    <!--
     <div class="program_details_area">
         <div class="container">
             <div class="row">
@@ -252,6 +251,8 @@
             </div>
         </div>
     </div>
-    <!--/ program_details -->    
+    --> 
+    <!--/ program_details -->
+       
 
 {% endblock content %}
