--- a/ProjectMain/users/templates/users/login.html
+++ b/ProjectMain/users/templates/users/login.html
@@ -8,8 +8,8 @@
 <!-- Start content Section-->
 <div class='content-section pt-5'>
     <div class='container'>
-        <div class='row '>
-            <div class='col-md-4 pl-3'>
+        <!--<div class='row '>
+            <div class='col-md-4 pl-3'>-->
                 <form method="POST">
                     {% csrf_token %}
                     <fieldset class="form-group">
@@ -20,8 +20,8 @@
                         <button class="btn btn-light btn-outline-secondary" type'"submit">Log In</button>
                     </div>
                 </form>
-            </div>
-        </div>
+            <!--</div>
+        </div>-->
     </div>
 </div>>
 <!-- End content Section-->
