Page editing for puctuation and correct data

--- a/ProjectMain/homepage/templates/homepage/index.html
+++ b/ProjectMain/homepage/templates/homepage/index.html
@@ -66,7 +66,7 @@
                         </div>
                         <span>Groom</span>
                         <h3>Doug Naes</h3>
-                        <p>Doug is kind and gentle, silly and goofy, genuine and loving. He is inviting. If he loves something, the people around him will know just for the sheer fact that they will be included in his excitement. He understands that people are made in the Image of God and treats them with the utmost value because of his understanding. The look that he gives Bethany has never changed: always with awe and passion. Because of his constant pursuit of the Lord (and his assurance in the Lord’s constant pursuit of him), he is continuously humbling himself to raise Bethany up. He leads her well, he guides her in everything they do, and he pushes her to be the best woman of God she can be. -"Bethany"</p>
+                        <p>Doug is kind and gentle, silly and goofy, genuine and loving. He is inviting. If he loves something, the people around him will know just for the sheer fact that they will be included in his excitement. He understands that people are made in the Image of God and treats them with the utmost value because of his understanding. The look that he gives Bethany has never changed: always with awe and passion. Because of his constant pursuit of the Lord and his assurance in the Lord’s constant pursuit of him, he is continuously humbling himself to raise Bethany up. He leads her well, he guides her in everything they do, and he pushes her to be the best woman of God she can be. -"Bethany"</p>
                         <div class="social_links">
                             <ul>
                                 <li><a href="https://www.facebook.com/doug.naes"> <i class="fa fa-facebook"></i> </a></li>
@@ -104,7 +104,7 @@
                         </div>
                         <span>Bride</span>
                         <h3>Bethany Sayers</h3>
-                        <p>The middle name Joy couldn’t be a more apt description of the kind of person Bethany is – joyful. She is full of life and she exudes happiness. Bethany is as bold as she is humble, and one of the most genuinely caring people you’ll meet. Bethany is defined by her core family values, and her identity is in Christ alone. As any of her closest friends and family would tell you, Bethany is fiercely loyal, and she embodies what it means to treat her neighbor as she’d treat herself. She loves Doug unconditionally, and is committed to being is life-long best friend. -"Doug"</p>
+                        <p>The middle name Joy couldn’t be a more apt description of the kind of person Bethany is – joyful. She is full of life and she exudes happiness. Bethany is as bold as she is humble, and one of the most genuinely caring people you’ll meet. Bethany is defined by her core family values, and her identity is in Christ alone. As any of her closest friends and family would tell you, Bethany is fiercely loyal, and she embodies what it means to treat her neighbor as she’d treat herself. She loves Doug unconditionally, and is committed to being his life-long best friend. -"Doug"</p>
                         <div class="social_links">
                             <ul>
                                 <li><a href="https://www.facebook.com/bethany.joy.77"> <i class="fa fa-facebook"></i> </a></li>
