--- a/ProjectMain/users/templates/users/login.html
+++ b/ProjectMain/users/templates/users/login.html
@@ -39,8 +39,8 @@
             <div class="col-xl-12">
                 <div class="section_title text-center">
                     <img src="{% static 'homepage/img/banner/flowers.png' %}" alt="">
-                    <span>14. January. 2020</span>
-                    <h3>THE. WEDDING. Countdown</h3>
+                    <span>26th of September, 2020</span>
+                    <h3>Countdown to the Big Day</h3>
                 </div>
             </div>
         </div>
