--- a/ProjectMain/homepage/templates/homepage/base.html
+++ b/ProjectMain/homepage/templates/homepage/base.html
@@ -43,7 +43,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-3 col-lg-3">
                             <div class="logo-img">
-                                <a href="index.html">
+                                <a href="{% url 'index' %}">
                                     <img src="{% static 'homepage/img/logo2.png' %}" alt="">
                                 </a>
                             </div>
