--- a/ProjectMain/homepage/templates/homepage/base.html
+++ b/ProjectMain/homepage/templates/homepage/base.html
@@ -64,6 +64,7 @@
                                         
                                         <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
                                         {% if user.is_authenticated %}
+                                            <li><a href="{% url 'csv_export' %}">Attending</a></li>
                                             <li><a href="{% url 'rsvp' %}">Rsvp</a></li>
                                             <li><a href="{% url 'logout' %}">Logout</a></li>
                                         {% else %}
@@ -110,6 +111,7 @@
                             
                             <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
                             {% if user.is_authenticated %}
+                                <li><a href="{% url 'csv_export' %}">Attending</a></li>
                                 <li><a href="{% url 'rsvp' %}">RSVP</a></li>
                                 <li><a href="{% url 'logout' %}">Logout</a></li>
                             {% else %}
