--- a/ProjectMain/homepage/templates/homepage/location.html
+++ b/ProjectMain/homepage/templates/homepage/location.html
@@ -4,11 +4,11 @@
 {% block content %}
 
    <!-- bradcam_area  -->
-   <!--<div class="bradcam_area text-center bradcam_bg overlay3">
+   <div class="bradcam_area text-center bradcam_bg_2 overlay3">
         <div class="bradcam_text">
-            <h3>Accommodation</h3>
+            <h1><b>RSVP</b></h1>
         </div>
-    </div>-->
+    </div>
     <!--/ bradcam_area  -->
 
     <!-- accommodation_area  -->
