Changed formatting on pages of rsvp and registry

--- a/ProjectMain/homepage/templates/homepage/registry.html
+++ b/ProjectMain/homepage/templates/homepage/registry.html
@@ -7,7 +7,7 @@
 <!-- bradcam_area  -->
 <div class="bradcam_area text-center bradcam_bg overlay3">
 	<div class="bradcam_text">
-		<h3><b>Registry</b></h3>
+		<h3>Registry</h3>
 	</div>
 </div>
 <!--/ bradcam_area  -->
