--- a/ProjectMain/homepage/templates/homepage/base.html
+++ b/ProjectMain/homepage/templates/homepage/base.html
@@ -104,8 +104,7 @@
         <div class="row">
             <div class="col-xl-8 offset-xl-2">
                 <div class="section_title text-center">
-                    <!--<h2>Registry</h2>-->
-                    <h2><br><a href="https://www.target.com/gift-registry/giftgiver?registryId=8f579b34db484f60ac06d4d64f654135&lnk=registry_custom_url"><b><i>Target Registry</i></b></a><br><br><a href="https://www.crateandbarrel.com/gift-registry/doug-naes-and-bethany-sayers/r6140541"><b><i>Crate&Barrel Registry</i></b></a></h2>
+                    <h3><br><a href="https://www.target.com/gift-registry/giftgiver?registryId=8f579b34db484f60ac06d4d64f654135&lnk=registry_custom_url">Target Registry</a><br><br><a href="https://www.crateandbarrel.com/gift-registry/doug-naes-and-bethany-sayers/r6140541">Crate&Barrel Registry</a></h3>
                 </div>
             </div>
         </div>
