Clean up and add decorations

--- a/ProjectMain/homepage/templates/homepage/index.html
+++ b/ProjectMain/homepage/templates/homepage/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
     </div>
-    <!--/ wedding_countdown -->
+    <!--End wedding_countdown -->
 
     <!-- our_love-story -->
     <div class="love_story_area">
@@ -116,7 +116,7 @@
             </div>
         </div>
     </div>
-    <!--/ our_love-story -->
+    <!--End our_love-story -->
 
     <!-- gallery_area  -->
     <div class="gallery_area">
@@ -197,7 +197,7 @@
             </div>
         </div>
     </div>
-    <!--/ gallery_area  -->
+    <!--End gallery_area  -->
 
     <!-- program_details -->
     <!--
@@ -252,7 +252,7 @@
         </div>
     </div>
     --> 
-    <!--/ program_details -->
+    <!--End program_details -->
        
 
 {% endblock content %}
