--- a/ProjectMain/homepage/templates/homepage/base.html
+++ b/ProjectMain/homepage/templates/homepage/base.html
@@ -62,7 +62,6 @@
                                                 <li><a href="single-blog.html">single-blog</a></li>
                                             </ul>
                                         </li>-->
-                                        
                                         <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
                                         {% if user.is_authenticated %}
                                             <li><a href="{% url 'csv_export' %}">Attending</a></li>
@@ -96,21 +95,21 @@
         {% endif %}
         {% block content %}{% endblock %}
     </div>
-
+    <!-- / Content Section -->
 
    <!-- footer_start -->
     <div class="accommodation_area">
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-8 offset-xl-2">
-                <div class="section_title text-center">
-                    <h3><br><a href="https://www.target.com/gift-registry/giftgiver?registryId=8f579b34db484f60ac06d4d64f654135&lnk=registry_custom_url">Target Registry</a><br><br><a href="https://www.crateandbarrel.com/gift-registry/doug-naes-and-bethany-sayers/r6140541">Crate&Barrel Registry</a></h3>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-8 offset-xl-2">
+                    <div class="section_title text-center">
+                        <img src="{% static 'homepage/img/banner/flowers.png' %}" alt="">
+                        <h3><br><a href="https://www.target.com/gift-registry/giftgiver?registryId=8f579b34db484f60ac06d4d64f654135&lnk=registry_custom_url">Target Registry</  a><br><br><a href="https://www.crateandbarrel.com/gift-registry/doug-naes-and-bethany-sayers/r6140541">Crate&Barrel Registry</a></h3>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    
-
     <footer class="footer">
     <div class="footer_top">
         <div class="container">
@@ -122,7 +121,6 @@
                             <li><a href="{% url 'registry' %}">Registry</a></li>
                             <!--<li><a href="{% url 'story' %}">Our Story</a></li>-->
                             <!--<li><a href="{% url 'gallery' %}">Gallery</a></li>-->
-                            
                             <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
                             {% if user.is_authenticated %}
                                 <li><a href="{% url 'csv_export' %}">Attending</a></li>
