--- a/ProjectMain/homepage/templates/homepage/registry.html
+++ b/ProjectMain/homepage/templates/homepage/registry.html
@@ -10,6 +10,34 @@
 		<h3>Registry</h3>
 	</div>
 </div>
-<!--/ bradcam_area  -->
+<!--End bradcam_area  -->
+
+<!-- Wedding_countdown -->
+<div class="weeding_countdown_area">
+	<div class="flowaers_top d-none d-lg-block">
+		<img src="{% static 'homepage/img/banner/flower-top.png' %}" alt="">
+	</div>
+	<div class="flowaers_bottom d-none d-lg-block">
+		<img src="{% static 'homepage/img/banner/flower-bottom.png' %}" alt="">
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-xl-12">
+				<div class="section_title text-center">
+					<img src="{% static 'homepage/img/banner/flowers.png' %}" alt="">
+					<span>26th of September, 2020</span>
+					<h3>Countdown to the Big Day</h3>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xl-12">
+				<div id="clock" class="countdown_area counter_bg">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--End Wedding_countdown -->
 
 {% endblock content %}
